// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Test Map statements DeleteMapEntry on BigMap 1`] = `
"
        (
            template_id (static_id 0 (\\"map.test.ts\\" 20))
            storage (big_map (\\"map.test.ts\\" 21) ((literal (string \\"some_key\\") (\\"map.test.ts\\" 21)) (literal (nat 1) (\\"map.test.ts\\" 21))))
            storage_type (())
            messages ((ep1 True False False True (\\"map.test.ts\\" 23) ((set_type (params (\\"map.test.ts\\" 23)) \\"string\\" (\\"map.test.ts\\" 25)) (delItem (data) (params (\\"map.test.ts\\" 23)) (\\"map.test.ts\\" 23)))))
            flags ()
            privates ()
            views ()
            entry_points_layout ()
            initial_metadata ()
            balance (literal (mutez 0) (\\"map.test.ts\\" 20))
        )
        "
`;

exports[`Test Map statements DeleteMapEntry on BigMap 2`] = `
"[
    {
        \\"prim\\": \\"storage\\",
        \\"args\\": [
            {
                \\"prim\\": \\"big_map\\",
                \\"args\\": [
                    {
                        \\"prim\\": \\"string\\"
                    },
                    {
                        \\"prim\\": \\"nat\\"
                    }
                ]
            }
        ]
    },
    {
        \\"prim\\": \\"parameter\\",
        \\"args\\": [
            {
                \\"prim\\": \\"string\\",
                \\"annots\\": [
                    \\"%ep1\\"
                ]
            }
        ]
    },
    {
        \\"prim\\": \\"code\\",
        \\"args\\": [
            [
                {
                    \\"prim\\": \\"UNPAIR\\"
                },
                {
                    \\"prim\\": \\"SWAP\\"
                },
                {
                    \\"prim\\": \\"NONE\\",
                    \\"args\\": [
                        {
                            \\"prim\\": \\"nat\\"
                        }
                    ]
                },
                {
                    \\"prim\\": \\"DIG\\",
                    \\"args\\": [
                        {
                            \\"int\\": \\"2\\"
                        }
                    ]
                },
                {
                    \\"prim\\": \\"UPDATE\\"
                },
                {
                    \\"prim\\": \\"NIL\\",
                    \\"args\\": [
                        {
                            \\"prim\\": \\"operation\\"
                        }
                    ]
                },
                {
                    \\"prim\\": \\"PAIR\\"
                }
            ]
        ]
    }
]"
`;

exports[`Test Map statements DeleteMapEntry on Map 1`] = `
"
        (
            template_id (static_id 0 (\\"map.test.ts\\" 9))
            storage (map (\\"map.test.ts\\" 10) ((literal (string \\"some_key\\") (\\"map.test.ts\\" 10)) (literal (nat 1) (\\"map.test.ts\\" 10))))
            storage_type (())
            messages ((ep1 True False False True (\\"map.test.ts\\" 12) ((set_type (params (\\"map.test.ts\\" 12)) \\"string\\" (\\"map.test.ts\\" 14)) (delItem (data) (params (\\"map.test.ts\\" 12)) (\\"map.test.ts\\" 12)))))
            flags ()
            privates ()
            views ()
            entry_points_layout ()
            initial_metadata ()
            balance (literal (mutez 0) (\\"map.test.ts\\" 9))
        )
        "
`;

exports[`Test Map statements DeleteMapEntry on Map 2`] = `
"[
    {
        \\"prim\\": \\"storage\\",
        \\"args\\": [
            {
                \\"prim\\": \\"map\\",
                \\"args\\": [
                    {
                        \\"prim\\": \\"string\\"
                    },
                    {
                        \\"prim\\": \\"nat\\"
                    }
                ]
            }
        ]
    },
    {
        \\"prim\\": \\"parameter\\",
        \\"args\\": [
            {
                \\"prim\\": \\"string\\",
                \\"annots\\": [
                    \\"%ep1\\"
                ]
            }
        ]
    },
    {
        \\"prim\\": \\"code\\",
        \\"args\\": [
            [
                {
                    \\"prim\\": \\"UNPAIR\\"
                },
                {
                    \\"prim\\": \\"SWAP\\"
                },
                {
                    \\"prim\\": \\"NONE\\",
                    \\"args\\": [
                        {
                            \\"prim\\": \\"nat\\"
                        }
                    ]
                },
                {
                    \\"prim\\": \\"DIG\\",
                    \\"args\\": [
                        {
                            \\"int\\": \\"2\\"
                        }
                    ]
                },
                {
                    \\"prim\\": \\"UPDATE\\"
                },
                {
                    \\"prim\\": \\"NIL\\",
                    \\"args\\": [
                        {
                            \\"prim\\": \\"operation\\"
                        }
                    ]
                },
                {
                    \\"prim\\": \\"PAIR\\"
                }
            ]
        ]
    }
]"
`;
